<resources>
    <string name="app_name">Bisan</string>
    <string name="toolbar_searchbox_hint">جستجو...</string>
    <string name="toolbar_title_1">بیســـان</string>
    <string name="label1">پرفروش ترین ها</string>
    <string name="label2">پیشنهادی ها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label3">دسته بندی محصولات</string>
    <string name="label4">مجموع کل سبد:</string>
    <string name="label5">تومان</string>
    <string name="label6">موجودی شما:</string>
    <string name="label7">کدتخفیف:</string>
    <string name="label8">اعمال</string>
    <string name="label9">کد تخفیف...</string>

    <string name="label10">تکمیل خرید</string>
    <string name="label11">خالی کردن سبد</string>
    <string name="label12">نام دریافت کننده:</string>
    <string name="label13">آدرس:</string>
    <string name="label14">تاریخ سفارش:</string>
    <string name="label15">مبلغ سفارش:</string>
    <string name="label16">وضعیت سفارش:</string>

    <string name="label17">تایید سفارش</string>
    <string name="label18">مشاهده مشخصات سفارش</string>
    <string name="label19">تاریخ:</string>
    <string name="label20">مبلغ:</string>
    <string name="label21">افزایش/کاهش</string>

    <string name="menu_drawer_login">ورود / ثبت نام</string>
    <string name="menu_drawer_profile">تنظیمات پروفایل</string>
    <string name="menu_drawer_wallet">کیف پول</string>
    <string name="menu_drawer_update">به روز رسانی / اعلان ها</string>
    <string name="menu_drawer_favorite">لیست علاقه مندی ها</string>
    <string name="menu_drawer_support">پشتیبانی</string>
    <string name="menu_drawer_rules">قوانین استفاده</string>
    <string name="menu_drawer_about">درباره ما</string>
    <string name="menu_drawer_friends">معرفی به دوستان</string>

    <string name="label22">فیلتر محصولات</string>
    <string name="label23">گران ترین</string>
    <string name="label24">تازه ترین ها</string>
    <string name="label25">پرفروش ترین ها</string>
    <string name="label26">مرتب سازی براساس:</string>
    <string name="label27">براساس نام</string>
    <string name="label28">براساس قیمت</string>
    <string name="label29">براساس دسته بندی</string>
    <string name="label30">اعمال فیلتر</string>
    <string name="label31">حذف فیلتر</string>
    <string name="label32">نام و نام خانوادگی...</string>
    <string name="label33">شماره تلفن...</string>
    <string name="label34">آدرس...</string>
    <string name="label35">پست الکترونیکی...</string>
    <string name="label36">برای ورود به برنامه لطفا شماره موبایل خود را در کادر زیر وارد کنید تا کد فعالسازی برای شما ارسال شود:</string>
    <string name="label37">شماره موبایل...</string>
    <string name="label38">ورود</string>
    <string name="label39">دسته بندی:</string>
    <string name="label40">افزودن به سبد خرید</string>
    <string name="label41">قیمت:</string>
    <string name="label42">واحد:</string>
    <string name="label43">امتیاز:</string>
    <string name="label44">توضیحات:</string>
    <string name="label45">ثبت تغییرات</string>
    <string name="label46">افزودن به سبد</string>
    <string name="label47">اتصال به اینترنت یافت نشد. لطفا دوباره تلاش کنید.</string>
    <string name="label48">تلاش مجدد</string>
    <string name="label49">هیچ موردی یافت نشد.</string>
    <string name="label50">ارسال مجدد پیامک</string>
    <string name="label51">محصول به سبد افزوده شد</string>
    <string name="label52">کاربر عادی</string>
    <string name="label53">ارسال مجدد</string>
    <string name="label54">خیر</string>
    <string name="label55">بله</string>
    <string name="label56">تکمیل خرید</string>
    <string name="label57">نام دریافت کننده:</string>
    <string name="label58">شماره تماس:</string>
    <string name="label59">آدرس:</string>
    <string name="label60">نقشه</string>
    <string name="label61">بستن</string>
    <string name="label62">مشخصات سفارش</string>
    <string name="label63">تایید اطلاعات</string>
    <string name="label64">انصراف خرید</string>
    <string name="label65">بستن</string>
    <string name="label66">کد پیگیری:</string>
    <string name="label67">وضعیت:</string>
    <string name="label68">پرداخت</string>
    <string name="label69">کد فعالسازی</string>
    <string name="label70">افزودن به سبد</string>
    <string name="label72">محصول قبلا افزوده شده است</string>
    <string name="label73">آدرس های قبلی</string>
    <string name="label74">تلفن:</string>
    <string name="label75">موجودی شما...</string>
    <string name="label76">ثبت موقعیت</string>
    <string name="toolbar_title_3">سفارشات</string>
    <string name="toolbar_title_2">سبد خرید</string>
    <string name="label77">حداکثر تا قیمت:</string>
    <string name="label78">موقعیت مکانی:</string>
    <string name="label79">موجودی کیف پول شما</string>
    <string name="label80">پرداخت از کیف پول به صورت اتوماتیک انجام می شود</string>
    <string name="label81">سرعت اینترنت پایین است دوباره تلاش کنید</string>
    <string name="label82">سرور مشغول است دوباره تلاش کنید</string>
    <string name="label83">به روز رسانی</string>
    <string name="label84">ورژن برنامه شما قدیمی است. لطفا آنرا بروزرسانی کنید.</string>
    <string name="label86">گوگل پلی</string>
    <string name="label85">کافه بازار</string>
    <string name="label87">نسخه جدید بیسان رسید!</string>

</resources>
