<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ActivityBackground"
    tools:context=".UI.Activities.Profile_Act">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@drawable/shadow_main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_ui_toolbar"></include>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/ActivityBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
            android:id="@+id/card_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            app:cardCornerRadius="7dp"
            app:cardBackgroundColor="@color/White"
            card_view:cardElevation="6dp">

            <RelativeLayout
                android:padding="11dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/icon_red_userprofile"
                    app:civ_border_color="@color/Gray"

                    app:civ_border_width="1dp"
                    />

                <EditText
                    android:id="@+id/edt_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_image"
                    android:gravity="center"
                    android:hint="@string/label32"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_phone_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_name_profile"
                    android:gravity="center"
                    android:hint="@string/label33"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_address_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_phone_profile"
                    android:gravity="center"
                    android:hint="@string/label34"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_address_profile"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:hint="@string/label35"
                    android:singleLine="true"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Gray"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/btn_save_profile"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@+id/edt_email_profile"
                    android:background="@drawable/shape_button_orange"
                    android:text="@string/label45"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:textColor="@color/White" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <include
            layout="@layout/layout_ui_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />
        <include layout="@layout/layout_ui_connectionfail" android:layout_height="match_parent" android:layout_width="match_parent"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>